--- a/values.yaml
+++ b/values.yaml
@@ -111,7 +111,7 @@ resources: {}
   #   memory: 32Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
