we use ingress, so no lb service needed
Signed-off-by: Johannes Kleinlercher <johannes.kleinlercher@suxess-it.com>

--- a/values.yaml
+++ b/values.yaml
@@ -13,7 +13,7 @@ images:
 entry:
   repositoryBasename: entry
   tag: "latest"
-  serviceType: LoadBalancer
+  serviceType: ClusterIP
   servicePort: 9000
   env: []
   #   - name: PODTATO_PART_NUMBER
