--- a/values-metalstack-prod.yaml
+++ b/values-metalstack-prod.yaml
@@ -1,5 +1,6 @@
 # applies to podtato-head-entry deployment only
 ingress:
+  className: nginx
   hosts:
     - host: prod-demo-app-metalstack.platform-engineer.cloud
       paths:
