--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,11 +3,11 @@ kind: Component
 metadata:
   name: "sx-cnp-demo-app"
   annotations:
-    github.com/project-slug: suxess-it/sx-cnp-demo-app
+    # github.com/project-slug: suxess-it/sx-cnp-demo-app
     backstage.io/kubernetes-label-selector: 'app.kubernetes.io/instance=prod-demo-app'
     argocd/app-name: "prod-demo-app"
     backstage.io/techdocs-ref: dir:.
-    kubecost.com/deployment-name: prod-demo-app-podtato-head-left-leg
+    # kubecost.com/deployment-name: prod-demo-app-podtato-head-left-leg
     grafana/dashboard-selector: "(tags @> '4GoldenSignals')"
     kargo-project: "https://kargo-127-0-0-1.nip.io/project/kargo-demo-app"
     grafana/overview-dashboard: "https://grafana-127-0-0-1.nip.io/d/a87fb0d919ec0ea5f6543124e16c42a5/kubernetes-compute-resources-namespace-workloads?orgId=1&refresh=10s&var-datasource=default&var-cluster=&var-namespace=prod-demo-app&var-type=All"
