--- a/catalog-info-metalstack.yaml
+++ b/catalog-info-metalstack.yaml
@@ -8,6 +8,7 @@ metadata:
     argocd/app-name: "prod-demo-app"
     backstage.io/techdocs-ref: dir:.
     # kubecost.com/deployment-name: prod-demo-app-podtato-head-left-leg
+    kubevirt-manager: "https://kubevirt-manager-metalstack.platform-engineer.cloud/"
     grafana/dashboard-selector: "(tags @> '4GoldenSignals')"
     kargo-project: "https://kargo-metalstack.platform-engineer.cloud/project/kargo-demo-app"
     grafana/overview-dashboard: "https://grafana-metalstack.platform-engineer.cloud/d/a87fb0d919ec0ea5f6543124e16c42a5/kubernetes-compute-resources-namespace-workloads?orgId=1&refresh=10s&var-datasource=default&var-cluster=&var-namespace=prod-demo-app&var-type=All"
