--- a/catalog-info-metalstack.yaml
+++ b/catalog-info-metalstack.yaml
@@ -9,7 +9,7 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     # kubecost.com/deployment-name: prod-demo-app-podtato-head-left-leg
     kubevirt-manager: "https://kubevirt-manager-metalstack.platform-engineer.cloud/"
-    grafana/dashboard-selector: "(tags @> '4GoldenSignals')"
+    grafana/dashboard-selector: "(tags @> 'kubernetes-mixin')"
     kargo-project: "https://kargo-metalstack.platform-engineer.cloud/project/kargo-demo-app"
     grafana/overview-dashboard: "https://grafana-metalstack.platform-engineer.cloud/d/a87fb0d919ec0ea5f6543124e16c42a5/kubernetes-compute-resources-namespace-workloads?orgId=1&refresh=10s&var-datasource=default&var-cluster=&var-namespace=prod-demo-app&var-type=All"
 spec:
